--- a/Datacom/Datacom.csproj
+++ b/Datacom/Datacom.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Constants.cs" />
+    <Compile Include="Models\Medium.cs" />
     <Compile Include="Simulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
