--- a/Datacom/Datacom.csproj
+++ b/Datacom/Datacom.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\BackoffNode.cs" />
     <Compile Include="Models\Constants.cs" />
     <Compile Include="Models\Medium.cs" />
     <Compile Include="Models\Node.cs" />
