--- a/Datacom/Datacom.csproj
+++ b/Datacom/Datacom.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Models\BackoffNode.cs" />
     <Compile Include="Models\Constants.cs" />
+    <Compile Include="Models\DcfNode.cs" />
     <Compile Include="Models\Medium.cs" />
     <Compile Include="Models\Node.cs" />
     <Compile Include="Simulator.cs" />
